--- a/charts/fittrackee/values.yaml
+++ b/charts/fittrackee/values.yaml
@@ -28,6 +28,8 @@ postgresql:
   enabled: true
   externalConnection:
     host: ""
+    database: ""
+    port: 5432
     usernameSecretKeyRef:
       name: ""
       key: ""
@@ -39,9 +41,6 @@ redis:
   enabled: true
   externalConnection:
     host: ""
-    usernameSecretKeyRef:
-      name: ""
-      key: ""
     passwordSecretKeyRef:
       name: ""
       key: ""
@@ -85,8 +84,6 @@ securityContext:
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
-  # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  port: 80
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
